Use JVM options for forked benchmarks to minimize impact of GCs on results