@@ -8,11 +8,21 @@ import org.openjdk.jmh.annotations.{Benchmark, _}
 import scala.language.postfixOps
 
 @State(Scope.Benchmark)
-@Warmup(iterations = 5)
-@Measurement(iterations = 5)
-@Fork(1)
 @BenchmarkMode(Array(Mode.Throughput))
 @OutputTimeUnit(TimeUnit.SECONDS)
+@Warmup(iterations = 5)
+@Measurement(iterations = 5)
+@Fork(value = 1, jvmArgs = Array(
+  "-server",
+  "-Xms1g",
+  "-Xmx1g",
+  "-XX:NewSize=512m",
+  "-XX:MaxNewSize=512m",
+  "-XX:InitialCodeCacheSize=256m",
+  "-XX:ReservedCodeCacheSize=256m",
+  "-XX:-UseBiasedLocking",
+  "-XX:+AlwaysPreTouch"
+))
 class NestedConcatenationBenchmarkCore {
   val n: Char = '\n'
   var a: Int = _
